# mini-search-engine

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  README.md  config.yaml  docker-compose.yml  domains
.github/workflows/: ci.yml
assets/: style.css
src/: config.rs  consts.rs  crawler.rs  indexer.rs  main.rs  test_utils.rs  utils.rs
src/indexer/: mod.rs  tech_terms.rs
src/routes/: index.rs  mod.rs  stats.rs
templates/: index.html  stats.html
