[package]
name = "mini-search-engine"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
axum = "0.7"
bincode = "1.3.3"
bytesize = "1.3.0"
humansize = "2.1.3"
lazy_static = "1.5.0"
mimalloc = "0.1"
scraper = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.34"
sled = "0.34"
spider = { version = "2.27", path = "spider/spider" }
tantivy = { version = "0.23.0", path = "tantivy" }
tera = "1.19.1"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }

[profile.release]
opt-level = 3           # Use "3" for maximum speed
debug = false           # Disable debug information
lto = "fat"             # Enable Link Time Optimization (LTO)
codegen-units = 1       # Reduce codegen units for better optimization at the cost of compile time
panic = "abort"         # Avoid unwinding for smaller and faster code
incremental = false     # Disable incremental compilation
overflow-checks = false # Disable overflow checks for optimized arithmetic
